--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "omnitutor",
+  "name": "mentis-ai",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/inter": "^5.2.8",
     "@google/genai": "^1.34.0",
     "@google/generative-ai": "^0.24.1",
     "clsx": "^2.1.1",
@@ -26,6 +27,9 @@
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.1",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
