--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "groq-sdk": "^0.37.0",
     "katex": "^0.16.27",
     "lucide-react": "^0.562.0",
+    "pdfjs-dist": "^5.4.624",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-markdown": "^10.1.0",
+    "react-router-dom": "^7.13.0",
     "rehype-katex": "^7.0.1",
     "remark-math": "^6.0.0",
     "tailwind-merge": "^3.4.0"
