--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@google/generative-ai": "^0.24.1",
     "clsx": "^2.1.1",
     "firebase": "^12.7.0",
+    "firebase-admin": "^13.6.1",
     "groq-sdk": "^0.37.0",
     "katex": "^0.16.27",
     "lucide-react": "^0.562.0",
