--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "pdfjs-dist": "^5.4.624",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-helmet-async": "^2.0.5",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.13.0",
     "rehype-katex": "^7.0.1",
